--- a/index.html
+++ b/index.html
@@ -49,10 +49,28 @@
                 <li class="list-group-item bg-dark">
                     <label for="date">Enter Date</label>
                     <input type="text" placeholder="1/10/2010" id="datetime" />
-                    <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
                 </li>
                 <li class="list-group-item bg-dark">
-                
+                    <label for="city">Enter City</label>
+                    <input type="text" placeholder="bonita" id="city" />
+                </li>
+                <li class="list-group-item bg-dark">
+                    <label for="state">Enter State</label>
+                    <input type="text" placeholder="ca" id="state" />
+                </li>
+                <li class="list-group-item bg-dark">
+                    <label for="country">Enter Country</label>
+                    <input type="text" placeholder="us" id="country" />
+                </li>
+                <li class="list-group-item bg-dark">
+                    <label for="shape">Enter Shape</label>
+                    <input type="text" placeholder="circle" id="shape" />
+                </li>
+                <li class="bg-dark list-group-item">
+                    <button id="input" type="button" class="btn btn-dark">Filter Table</button>                        
+                </li>
+                <li class="bg-dark list-group-item">
+                    <button id="filter-btn" type="button" class="btn btn-dark">Clear Filter</button> 
                 </li>
             </ul>
           </div>
